name: problem
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
data-files:
    1_sample_input.txt
    input.txt
    2_sample_input.txt
x-ghc-framework-version: 7.10.3-5.18-1
x-last-ide-version: HfM1.3.0
Executable problem
  main-is: Problem.hs
  buildable: True
  build-depends:
      base -any
